[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

name = "dimo-python-sdk"
version = "0.0.1"
authors = [
  { name="Barrett Kowalsky", email="barrettkowalsky@gmail.com" },
]
description = "DIMO SDK in Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.25.1",
    "aiohttp>=3.7.4",
    "web3>=6.20.0"
]

[project.urls]
Homepage = "https://github.com/DIMO-Network/dimo-python-sdk"
Issues = "https://github.com/DIMO-Network/dimo-python-sdk/issues"